@@ -27,6 +27,7 @@ type linear_unit_info =
   {
     mutable unit_name : string;
     mutable items : linear_item_info list;
+    mutable for_pack : string option
   }
 
 (* Marshal and unmarshal a compilation unit in Linear format.
